Create calculator layout

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,33 @@
 </head>
 
 <body>
-  <div>
-    <span>Test</span>
+  <div class="container">
+    <div class="row">
+      <span id="screen">0</span>
+      <button id="equals">=</button>
+    </div>
+    <div class="row">
+      <button id="1">1</button>
+      <button id="2">2</button>
+      <button id="3">3</button>
+      <button id="add">+</button>
+    </div>
+    <div class="row">
+      <button id="4">4</button>
+      <button id="5">5</button>
+      <button id="6">6</button>
+      <button id="subtract">-</button>
+    </div>
+    <div class="row">
+      <button id="7">7</button>
+      <button id="8">8</button>
+      <button id="9">9</button>
+      <button id="multiply">*</button>
+    </div>
+    <div class="row">
+      <button id="clear">clear</button>
+      <button id="divide">/</button>
+    </div>
   </div>
 </body>
 </html>
