--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     </div>
     <div class="row">
       <button id="clear">clear</button>
+      <button id="0">0</button>
       <button id="divide">/</button>
     </div>
   </div>
