--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,32 @@
 <body>
   <div class="container">
     <div class="row">
-      <span id="screen">0</span>
-      <button id="equals">=</button>
+      <span class="screen">_</span>
+      <button class="parseCalc">=</button>
     </div>
     <div class="row">
-      <button id="1">1</button>
-      <button id="2">2</button>
-      <button id="3">3</button>
-      <button id="add">+</button>
+      <button class="insertDigit">1</button>
+      <button class="insertDigit">2</button>
+      <button class="insertDigit">3</button>
+      <button class="insertOperator">+</button>
     </div>
     <div class="row">
-      <button id="4">4</button>
-      <button id="5">5</button>
-      <button id="6">6</button>
-      <button id="subtract">-</button>
+      <button class="insertDigit">4</button>
+      <button class="insertDigit">5</button>
+      <button class="insertDigit">6</button>
+      <button class="insertOperator">-</button>
     </div>
     <div class="row">
-      <button id="7">7</button>
-      <button id="8">8</button>
-      <button id="9">9</button>
-      <button id="multiply">*</button>
+      <button class="insertDigit">7</button>
+      <button class="insertDigit">8</button>
+      <button class="insertDigit">9</button>
+      <button class="insertOperator">*</button>
     </div>
     <div class="row">
-      <button id="clear">clear</button>
-      <button id="0">0</button>
-      <button id="divide">/</button>
+      <button class="clearCalc">clear</button>
+      <button class="negateNumber">neg</button>
+      <button class="insertDigit">0</button>
+      <button class="insertOperator">/</button>
     </div>
   </div>
 </body>
